minor update to force build

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Modern Multipurpose Landing Pages Template Using React, Next, Styled Components and so on. It also support Gatsby Static site generator ",
   "version": "3.2.0",
   "private": true,
-  "author": "RedQ Team",
+  "author": "none",
   "license": "",
   "repository": {
     "type": "git",
